--- a/piping-app/package.json
+++ b/piping-app/package.json
@@ -17,6 +17,7 @@
     "papaparse": "^5.5.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "uuid": "^13.0.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
