--- a/piping-app/package.json
+++ b/piping-app/package.json
@@ -15,12 +15,15 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.84.0",
     "@types/papaparse": "^5.5.1",
+    "dexie": "^4.2.1",
+    "dexie-react-hooks": "^4.2.0",
     "lucide-react": "^0.555.0",
     "next": "16.0.4",
     "papaparse": "^5.5.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "uuid": "^13.0.0",
+    "workbox-window": "^7.4.0",
     "xlsx": "^0.18.5",
     "zustand": "^5.0.9"
   },
